@@ -6,13 +6,14 @@ import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 
 /**
- * This class implements a bounded buffer that associates each key with a list of values.
+ * Passive component, used as monitor.
+ * This class implements an unbounded buffer that associates each key with a list of values.
  * The buffer is thread-safe and supports concurrent read and write operations.
  *
  * @param <X> the type of keys in the buffer
  * @param <Y> the type of values in the buffer
  */
-public class Distribution<X,Y> implements BoundedBuffer<X,Y>{
+public class Distribution<X,Y> implements UnboundedBuffer<X,Y> {
     private final Map<X, List<Y>> buffer;
     private final ReadWriteLock lock;
 
@@ -25,7 +26,7 @@ public class Distribution<X,Y> implements BoundedBuffer<X,Y>{
     public void writeInterval(X key, Y item) throws InterruptedException {
         lock.writeLock().lockInterruptibly();
         try {
-            this.buffer.merge(key, new ArrayList<>(List.of(item)), (list1, list2) -> {
+            this.buffer.merge(key, new ArrayList<>(List.of(item)), (list1, list2) -> { //Arrays.asList(item)
                 list1.addAll(list2);
                 return list1;
             });
@@ -38,7 +39,7 @@ public class Distribution<X,Y> implements BoundedBuffer<X,Y>{
     public List<Y> readInterval(X key) throws InterruptedException {
         lock.readLock().lockInterruptibly();
         try {
-            return List.copyOf(buffer.get(key));
+            return List.copyOf(buffer.get(key)); //buffer.get(key);
         } finally {
             lock.readLock().unlock();
         }
@@ -48,7 +49,7 @@ public class Distribution<X,Y> implements BoundedBuffer<X,Y>{
     public Map<X, List<Y>> readDistribution() {
         lock.readLock().lock();
         try {
-            return Map.copyOf(buffer);
+            return Map.copyOf(buffer); //buffer;
         } finally {
             lock.readLock().unlock();
         }
